# gitignore-downloader

./: README.md  pyproject.toml
src/gitignore_downloader/: __main__.py
