[project]
name = "gitignore-downloader"
version = "0.1.0"
description = "Download .gitignore template for a specified language."
authors = [{ name = "tssujt", email = "github@tssujt.xyz" }]
dependencies = ["requests>=2.31.0"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
gitignore_downloader = "gitignore_downloader.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 80
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 80
